# actiongate-openai

./: LICENSE  README.md  demo.py  pyproject.toml
actiongate_openai/: __init__.py  actiongate_openai.py
tests/: test_openai.py
